# cmake-metal-cpp

./: .gitignore  CMakeLists.txt  README.md  metal.cpp
metal-cpp-beta/Metal/: MTLAccelerationStructure.hpp  MTLAccelerationStructureCommandEncoder.hpp  MTLArgument.hpp  MTLArgumentEncoder.hpp  MTLBinaryArchive.hpp  MTLBlitCommandEncoder.hpp  MTLBlitPass.hpp  MTLBuffer.hpp  MTLCaptureManager.hpp  MTLCommandBuffer.hpp  MTLCommandEncoder.hpp  MTLCommandQueue.hpp  MTLComputeCommandEncoder.hpp  MTLComputePass.hpp  MTLComputePipeline.hpp  MTLCounters.hpp  MTLDepthStencil.hpp  MTLDevice.hpp  MTLDrawable.hpp  MTLDynamicLibrary.hpp  MTLEvent.hpp  MTLFence.hpp  MTLFunctionConstantValues.hpp  MTLFunctionDescriptor.hpp  MTLFunctionHandle.hpp  MTLFunctionLog.hpp  MTLFunctionStitching.hpp  MTLHeap.hpp  MTLIOCommandBuffer.hpp  MTLIOCommandQueue.hpp  MTLIOCompressor.hpp  MTLIndirectCommandBuffer.hpp  MTLIndirectCommandEncoder.hpp  MTLIntersectionFunctionTable.hpp  MTLLibrary.hpp  MTLLinkedFunctions.hpp  MTLParallelRenderCommandEncoder.hpp  MTLPipeline.hpp  MTLPixelFormat.hpp  MTLRasterizationRate.hpp  (+12 more)
metal-cpp-extensions/: Foundation
metal-cpp-extensions/AppKit/: AppKit.hpp  NSApplication.hpp  NSMenu.hpp  NSMenuItem.hpp  NSRunningApplication.hpp  NSView.hpp  NSWindow.hpp
metal-cpp-extensions/MetalKit/: MTKView.hpp
metal-cpp/Metal/: MTLAccelerationStructure.hpp  MTLAccelerationStructureCommandEncoder.hpp  MTLArgument.hpp  MTLArgumentEncoder.hpp  MTLBinaryArchive.hpp  MTLBlitCommandEncoder.hpp  MTLBlitPass.hpp  MTLBuffer.hpp  MTLCaptureManager.hpp  MTLCommandBuffer.hpp  MTLCommandEncoder.hpp  MTLCommandQueue.hpp  MTLComputeCommandEncoder.hpp  MTLComputePass.hpp  MTLComputePipeline.hpp  MTLCounters.hpp  MTLDepthStencil.hpp  MTLDevice.hpp  MTLDrawable.hpp  MTLDynamicLibrary.hpp  MTLEvent.hpp  MTLFence.hpp  MTLFunctionConstantValues.hpp  MTLFunctionDescriptor.hpp  MTLFunctionHandle.hpp  MTLFunctionLog.hpp  MTLFunctionStitching.hpp  MTLHeap.hpp  MTLIndirectCommandBuffer.hpp  MTLIndirectCommandEncoder.hpp  MTLIntersectionFunctionTable.hpp  MTLLibrary.hpp  MTLLinkedFunctions.hpp  MTLParallelRenderCommandEncoder.hpp  MTLPipeline.hpp  MTLPixelFormat.hpp  MTLRasterizationRate.hpp  MTLRenderCommandEncoder.hpp  MTLRenderPass.hpp  MTLRenderPipeline.hpp  (+9 more)
scripts/: RemoveUselessImports.py
